--- a/src/app/pages/public/login/login.component.html
+++ b/src/app/pages/public/login/login.component.html
@@ -11,7 +11,7 @@
         <div class="content">
           <div class="field">
             <p class="control has-icons-left has-icons-right">
-              <input class="input" type="email" placeholder="Email">
+              <input class="input" name="correo" [(ngModel)]="user.correo" type="email" placeholder="Email">
               <span class="icon is-small is-left">
                 <i class="fas fa-envelope"></i>
               </span>
@@ -22,7 +22,7 @@
           </div>
           <div class="field">
             <p class="control has-icons-left">
-              <input class="input" type="password" placeholder="Password">
+              <input class="input" name="contrasena" [(ngModel)]="user.contrasena" type="password" placeholder="Password">
               <span class="icon is-small is-left">
                 <i class="fas fa-lock"></i>
               </span>
