--- a/src/app/pages/public/register/register.component.html
+++ b/src/app/pages/public/register/register.component.html
@@ -17,21 +17,12 @@
       <div class="media-content">
         <div class="content">
           <form>
-            <div class="field">
-              <p class="control has-icons-left">
-                <input class="input" [(ngModel)]="user.telefono" type="text"
-                  placeholder="Telefono" name="telefono">
-                <span class="icon is-small is-left">
-                  <i class="fas fa-lock"></i>
-                </span>
-              </p>
-            </div>
-            <div class="field">
+            <div class="field is-grouped">
               <div class="control has-icons-left">
                 <div class="select">
                   <select name="idPrefijo" id="idPrefijo" [(ngModel)]="user.idPrefijo"> 
-                    <option *ngFor="let prefijo of listaPrefijos" [value]="prefijo.idPrefijo">
-                      {{ prefijo.prefix }}
+                    <option *ngFor="let prefijo of listaPrefijos" [value]="prefijo.id_prefijo">
+                      {{ prefijo.prefijo }}
                     </option>
                   </select>
                 </div>
@@ -39,6 +30,13 @@
                   <i class="fas fa-globe"></i>
                 </div>
               </div>
+              <p class="control has-icons-left is-expanded">
+                <input class="input" [(ngModel)]="user.telefono" type="text"
+                  placeholder="Telefono" name="telefono">
+                <span class="icon is-small is-left">
+                  <i class="fas fa-lock"></i>
+                </span>
+              </p>
             </div>
             <!-- <div class="field">
               <p class="control has-icons-left">
