--- a/src/app/pages/public/register/register.component.html
+++ b/src/app/pages/public/register/register.component.html
@@ -48,7 +48,7 @@
             </div> -->
             <div class="field">
               <p class="control has-icons-left has-icons-right">
-                <input class="input" [(ngModel)]="user.correo" name="correo" type="email" placeholder="Email">
+                <input class="input" type="email" [(ngModel)]="user.correo" name="correo" type="email" placeholder="Email">
                 <span class="icon is-small is-left">
                   <i class="fas fa-envelope"></i>
                 </span>
